# panoseti_ctapipe_plugin

./: .gitignore  conftest.py  panodisplay_REALDATA_gaincorrected.C  pyproject.toml  run_tests.sh  setup.cfg
notebooks/pedestals/: pedestal_tel1.csv  pedestal_tel2.csv  pedestal_tel3.csv  pedestal_tel4.csv
panoseti_ctapipe_plugin/: __init__.py  eventsource.py  instrument.py  pyproject.toml  reconstructor.py
panoseti_ctapipe_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
panoseti_ctapipe_plugin/data/: gains_tel4_PTI-Heli.csv  pointing_offsets.csv
panoseti_ctapipe_plugin/panoseti_ctapipe_plugin/: __init__.py  eventsource.html  eventsource.py  functions.html  functions.py  instrument.py
src/panoseti_ctapipe_plugin/: __init__.py  test_source.py
test_data/: start_2025-10-22T07-18-22Z.dp_ph1024.bpp_2.module_254.seqno_0.pff
tests/: conftest.py  test_functions.py  test_instrument.py  test_source.py
