[project]
name = "panoseti_ctapipe_plugin"
version = "0.1.0"
description = "PANOSETI ctapipe plugin"
authors = [{name = "Sruthiranjani Ravikularaman", email = "sruthi@astro.rub.de"}]
dependencies = [
	"ctapipe",
	"numpy",
	"astropy",
	"pypff",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.entry-points.ctapipe_io]
PanoEventSource = "panoseti_ctapipe_plugin:PanoEventSource"

[project.entry-points.ctapipe_reco]
PanoReconstructor = "panoseti_ctapipe_plugin:PanoReconstructor"