[metadata]
name = panoseti_ctapipe_plugin
version = 0.1.0
author = Your Name
description = PANOSETI plugin for ctapipe
long_description = file: README.md
license = MIT
packages = find:

[options.entry_points]
ctapipe.io.eventsource =
    panoseti = panoseti_ctapipe_plugin.eventsource:PanoEventSource
ctapipe.reco.reconstructor =
    panoseti = panoseti_ctapipe_plugin.reconstructor:PanoReconstructor
