[project]
name = "panoseti_ctapipe_plugin"
version = "0.1.0"
description = "PANOSETI ctapipe plugin"
authors = [{name = "Sruthiranjani Ravikularaman", email = "sruthi@astro.rub.de"}]
dependencies = [
	"ctapipe",
	"numpy",
	"astropy",
	"pypff",
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.entry-points.ctapipe_io]
PanoEventSource = "panoseti_ctapipe_plugin:PanoEventSource"